# mlgsc

./: .gitignore  BUGS.md  LICENSE  MLGSC.cabal  Makefile  README-long.md  README.esmd  README.md  TODO.md  mlgsc.cabal  stack.yaml
data/: .gitignore  16S_V1-V3_wID_tail.mfa  16S_V1-V3_wID_tail.nw  Bacteria.nw  Bacteria_rplB_nuc.fas  Bacteria_rplB_nuc.msa  GG13.taxo  NCBI_Bact.taxo  NCBI_Bacteria_cleanup.nw  NCBI_Bacteria_cleanup_condensed.nw  NCBI_Bacteria_cleanup_pruned_condensed.nw  NCBI_Bacteria_cleanup_pruned_condensed.taxo  NCBI_Bacteria_cleanup_pruned_condensed_nonested.nw  NCBI_Bacteria_pruned_condensed.nw  Spo0A.msa  Spo0A.pep  env_Spo0A.pep  final_aln.mfa  final_prot_tree.nw  final_prot_tree_bl.nw  final_tree.nw  firm_Spo0A_bal_noweight.mod  firm_Spo0A_nobal_noweight.mod  firm_Spo0A_nobal_weight.mod  firmicute_Spo0A_byGenus.msa  firmicute_Spo0A_byGenus.pep  firmicute_genera.nw  firmicutes_extraGenus.nw  firmicutes_gt1.aln  firmicutes_gt1.nw  firmicutes_gt1_wID.aln  frc_nID.csv  frc_nID.msa  fromNCBI.lua  gg_13_5_taxonomy.txt  good_runs  ms-rev-genus-tree.nw  queries.pep  reference.msa  tree2taxo.lua  (+3 more)
data/manuscript/: ENA_nifH_full_cleanHdr.dna  ENA_nifH_full_cleanHdr_orf800_bestORF.pep  Spo0A_env_ampl_prot.pep  firmicute_Spo0A_prot_train.msa  firmicute_genera_fully-labeled.nw  firmicutes_Spo0A.mod  good_amp_derep.pep  nifH_genera.nw  train_byGenus_wID.msa
man/: Makefile  mlgsc.1.md  mlgsc_train.1.md
src/: .Model.hs.swp  .gitignore  .mlgsc.hs.swp  API.hs  Align.hs  Alignment.hs  Cdf.hs  CladeModel.hs  CladeModelAux.hs  Classifier.hs  Crumbs.hs  FastA.hs  IDTree.hs  LOO1.out  Makefile  MlgscTypes.hs  Model.hs  NeighborJ.hs  NewickDumper.hs  NewickParser.hs  NucModel.hs  Output.hs  OutputFormatStringParser.hs  PWMModel.hs  PWMModelAux.hs  PepModel.hs  Sandbox.hs  Shuffle.hs  SimpleNucModel.hs  SimplePepModel.hs  TaxoParser.hs  Trees.hs  Trim.hs  Weights.hs  alntoy.hs  appopts.hs  hmmtoy.hs  kmer_toy.hs  mlgsc.hs  mlgsc_dump.hs  (+6 more)
test/: .gitignore  AppTest.hs  Makefile  TODO_taxo  TestAlign.hs  TestAlignment.hs  TestCdf.hs  TestClassifier.hs  TestCrumbs.hs  TestEntropy.hs  TestFastA.hs  TestFileUtils.hs  TestIDTree.hs  TestModel.hs  TestNewick.hs  TestNewickParser.hs  TestNucModel.hs  TestPWMModel.hs  TestPepModel.hs  TestSSMap.hs  TestTypes.hs  TestWeights.hs  bacteria.taxo  dna_test.fasta  final_prot_aln.bcls  final_prot_aln.msa  final_prot_tree.nw  firmicutes.taxo  firmicutes_gt1.mod  frc.pep  frc_4train.bcls  idaln.bcls  idaln.mfa  idaln.pep  idtree.nw  mlgsc_firmic2_Spo0A_x.exp  mlgsc_firmic2_Spo0A_xb.exp  mlgsc_firmic2_Spo0A_xw.exp  mlgsc_firmic_Spo0A.exp  mlgsc_firmic_Spo0A_x.exp  (+34 more)
